first step for overview about the recurrence dates
